update : full function ready to prodution
